--- a/index.html
+++ b/index.html
@@ -123,28 +123,29 @@
             <div class="col-md-7">
               <div class="col-md-7">
               <form id="contactForm" class="contact-form needs-validation" novalidate>
-  <div class="mb-3 form-floating">
-    <input type="text" class="form-control" name="user_name" placeholder="Name" required>
-    <label>Name</label>
-    <div class="invalid-feedback">Please enter your name.</div>
-  </div>
+               <div class="mb-3 form-floating">
+                <input type="text" class="form-control" name="user_name" placeholder="Name" required>
+                <label>Name</label>
+               <div class="invalid-feedback">Please enter your name.</div>
+               </div>
 
-  <div class="mb-3 form-floating">
-    <input type="email" class="form-control" name="user_email" placeholder="Email" required>
-    <label>Email</label>
-    <div class="invalid-feedback">Please enter your name.</div>
-  </div>
+               <div class="mb-3 form-floating">
+                <input type="email" class="form-control" name="user_email" placeholder="Email" required>
+                <label>Email</label>
+               <div class="invalid-feedback">Please enter your name.</div>
+               </div>
 
-  <div class="mb-3 form-floating">
-    <textarea class="form-control" name="message" placeholder="Message" style="height:120px" required></textarea>
-    <label>Message</label>
-    <div class="invalid-feedback">Please enter your name.</div>
-  </div>
+               <div class="mb-3 form-floating">
+                <textarea class="form-control" name="message" placeholder="Message" style="height:120px" required></textarea>
+                <label>Message</label>
+                <div class="invalid-feedback">Please enter your name.</div>
+               </div>
 
-  <button type="submit" class="btn btn-primary">Send Message</button>
-</form>
+                <button type="submit" class="btn btn-primary">Send Message</button>
+              </form>
 
-              <div id="formAlert" class="mt-3" style="display:none;"></div>
+              <div id="formAlert" class="mt-3" style="display:none;">
+              </div>
             </div>
           </div>
 
