--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
       <!-- CONTACT -->
-           <section id="contact" class="py-2"></section>
+     <section id="contact" class="py-2"></section>
       <main class="py-5 mt-5">
       <div class="container">
         <div class="glass section-card p-4 p-md-5">
@@ -114,11 +114,46 @@
 
           <div class="row">
             <div class="col-md-5">
-              <p><strong>Phone:</strong> +91 90746 19231</p>
-              <p><strong>Email:</strong> connecteqters@gmail.com</p>
-              <p><strong>WhatsApp:</strong> +91 90746 19231</p>
-              <p><strong>Instagram:</strong> @eqters.in</p>
-            </div>
+            <p><strong>Phone:</strong> +91 90746 19231</p>
+
+            <p>
+            <strong>Email:</strong>
+            <a href="mailto:connecteqters@gmail.com" class="contact-link">connecteqters@gmail.com</a>
+            </p>
+
+            <p>
+            <strong>WhatsApp:</strong>
+            <a href="https://wa.me/919074619231" target="_blank" class="contact-link">+91 90746 19231</a>
+            </p>
+
+         <div class="d-flex align-items-center gap-3 mt-3">
+         <!-- Instagram -->
+          <a
+            href="https://www.instagram.com/eqters.in/"
+            target="_blank"
+            aria-label="Instagram"
+            class="social-icon"
+          >
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"
+            alt="Instagram"
+          >
+         </a>
+
+        <!-- Email -->
+        <a
+         href="mailto:connecteqters@gmail.com"
+         aria-label="Email"
+         class="social-icon"
+        >
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/732/732200.png"
+          alt="Email"
+        >
+       </a>
+     </div>
+    </div>
+
 
             <div class="col-md-7">
               <div class="col-md-7">
