--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <link
+     rel="stylesheet"
+     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+    >
+
     <!-- Site CSS -->
     <link rel="stylesheet" href="style.css">
   </head>
@@ -126,34 +131,25 @@
             <a href="https://wa.me/919074619231" target="_blank" class="contact-link">+91 90746 19231</a>
             </p>
 
-         <div class="d-flex align-items-center gap-3 mt-3">
-         <!-- Instagram -->
-          <a
-            href="https://www.instagram.com/eqters.in/"
-            target="_blank"
-            aria-label="Instagram"
-            class="social-icon"
-          >
-          <img
-            src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"
-            alt="Instagram"
-          >
-         </a>
+          <div class="d-flex gap-4 mt-3 contact-icons">
+             <!-- Instagram -->
+             <a
+               href="https://www.instagram.com/eqters.in/"
+               target="_blank"
+               aria-label="Instagram"
+              >
+             <i class="bi bi-instagram"></i>
+            </a>
 
-        <!-- Email -->
-        <a
-         href="mailto:connecteqters@gmail.com"
-         aria-label="Email"
-         class="social-icon"
-        >
-        <img
-          src="https://cdn-icons-png.flaticon.com/512/732/732200.png"
-          alt="Email"
-        >
-       </a>
-     </div>
-    </div>
-
+            <!-- Email -->
+            <a
+              href="mailto:connecteqters@gmail.com"
+              aria-label="Email"
+             >
+             <i class="bi bi-envelope"></i>
+           </a>
+         </div>
+         </div>
 
             <div class="col-md-7">
               <div class="col-md-7">
