--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Eqters — Home</title>
+    <title>EQTERS | Professional Trading Education & Webinars</title>
+
+
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon32.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="images/favicon64.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="images/favicon512.png">
+
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,6 +21,24 @@
 
     <!-- Site CSS -->
     <link rel="stylesheet" href="style.css">
+     
+    <meta name="description" content="EQTERS is a professional trading education platform offering live webinars, crash courses, and structured learning for stocks, forex, and crypto traders.">
+
+    
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "EQTERS",
+  "url": "https://eqters.com",
+  "logo": "https://eqters.com/favicon-512.png",
+  "sameAs": [
+    "https://www.instagram.com/eqters.in"
+  ]
+}
+</script>
+
+
   </head>
   <body>
 
