--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>EQTERS | Professional Trading Education & Webinars</title>
 
 
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon32.png">
-    <link rel="icon" type="image/png" sizes="64x64" href="images/favicon64.png">
-    <link rel="apple-touch-icon" sizes="512x512" href="images/favicon512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon32.png">
+<link rel="icon" type="image/png" sizes="64x64" href="/favicon64.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/favicon512.png">
 
 
     <!-- Bootstrap CSS -->
@@ -239,3 +239,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
