--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon32.png">
-<link rel="icon" type="image/png" sizes="64x64" href="/favicon64.png">
-<link rel="icon" type="image/png" sizes="512x512" href="/favicon512.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon64.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/favicon512.png">
 
 
     <!-- Bootstrap CSS -->
@@ -18,6 +18,10 @@
      rel="stylesheet"
      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
     >
+
+    <meta property="og:site_name" content="Eqters">
+    <meta property="og:title" content="Eqters">
+    <meta property="og:image" content="https://eqters.com/favicon512.png">
 
     <!-- Site CSS -->
     <link rel="stylesheet" href="style.css">
@@ -239,4 +243,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
